# ml-classification-api

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
ai/: data.py  utils.py
app/: config.py  main.py
app/api/: nlp.py  user.py
app/core/: auth.py  nlp.py  user.py
app/database/: mongodb.py
app/models/: models.py
app/schema/: hash.py  oa2.py  schemas.py  token.py
tests/ai/: test_data.py  test_utils.py
tests/app/: test_main.py
